# mcp-ynab

./: .gitignore  CLAUDE.md  FIELDS.md  README.md  TODO.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: publish.yml
src/: config.py  server.py  ynab_client.py
src/app/api/chat/: route.ts
src/cache/: delta.py  fallback.py  service.py
src/components/chat/: chat-input.tsx  chat-page.tsx  message-list.tsx  tool-invocation.tsx
src/db/: engine.py  tables.py
src/lib/mcp/: client.ts  tools.ts
src/models/: __init__.py  account.py  budget.py  category.py  common.py  money_movement.py  month.py  payee.py  scheduled_transaction.py  transaction.py
src/server/: __init__.py  _shared.py  analytics.py  categories.py
tests/: test_client.py  test_models.py  test_server.py
website/: astro.config.mjs  package-lock.json  package.json
website/src/components/: CopyButton.astro  Footer.astro  Nav.astro
website/src/layouts/: Layout.astro
website/src/pages/: docs.astro  index.astro  setup.astro
website/src/styles/: global.css
